# ChangeLog for sys-apps/calculate-utilities
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-utilities-2.2.25-r8 (04 Nov 2011)

  04 Nov 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.25-r8.ebuild:
  Update for templates

*calculate-utilities-2.2.25-r7 (02 Nov 2011)

  02 Nov 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.25-r7.ebuild:
  Update for templates

*calculate-utilities-2.2.25-r6 (27 Oct 2011)

  27 Oct 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.25-r6.ebuild:
  Update for templates.

*calculate-utilities-2.2.25-r5 (27 Oct 2011)

  27 Oct 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.25-r5.ebuild:
  Update for builder

*calculate-utilities-2.2.25-r4 (25 Oct 2011)

  25 Oct 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.25-r4.ebuild:
  Update for assemble and templates

*calculate-utilities-2.2.25-r3 (25 Oct 2011)

  25 Oct 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.25-r3.ebuild:
  Update for templates

*calculate-utilities-2.2.25-r2 (24 Oct 2011)

  24 Oct 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.25-r2.ebuild:
  Update for templates and assemble

*calculate-utilities-2.2.25-r1 (20 Oct 2011)

  20 Oct 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.25-r1.ebuild:
  Update for assemble

*calculate-utilities-2.2.25 (18 Oct 2011)

  18 Oct 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-utilities-2.2.24.ebuild, -calculate-utilities-2.2.24-r1.ebuild,
  -calculate-utilities-2.2.24-r2.ebuild, -calculate-utilities-2.2.24-r3.ebuild,
  -calculate-utilities-2.2.24-r4.ebuild, -calculate-utilities-2.2.24-r5.ebuild,
  -calculate-utilities-2.2.24-r6.ebuild, -calculate-utilities-2.2.24-r7.ebuild,