@@ -2,7 +2,8 @@ AUX calculate-assemble-2.2.24-r1.patch 1168 RMD160 4e12f441e3b1dec84fe1c9c6fef04
 AUX calculate-assemble-2.2.25-r1.patch 1740 RMD160 e587246aaa57efa3cf577d4fbdf5c4bfe9f073e7 SHA1 fdb04a748f85a498109a974400dd83f50f64fbb7 SHA256 18642689deaae6ad02681966d3e2aa53af8c556a7a2e9a946f91ffd8dffbb335
 AUX calculate-assemble-2.2.25-r2.patch 2236 RMD160 77364052a6d9e10c7badf3551fa55fc79368f38a SHA1 10d35cdfdf0ea0e30d4cff5e5d44d5f2fd215e30 SHA256 1047cc7553907fbb4713a12578f9dbfc2bfefa361abf3160af14f84763a132fa
 AUX calculate-assemble-2.2.25-r3.patch 2697 RMD160 1d54c10223ff2a6dc5125e4a52c5a0625fce394e SHA1 0f99422e5935c8124f36c7372ee31489cf20c41a SHA256 97507f25d481a62a9fd7a907853d2b195ad745318e8a614bf1f24c4d2ef0b620
-AUX calculate-assemble-2.2.25-r4.patch 14710 RMD160 66d0b2ccc2b6aca65f9ca2f552d72a93be6dcce4 SHA1 852b52fd28d4c50869b4a5c8b92693f291ac1017 SHA256 78ebc3708269722ea423e572e6bd3d3159dcd3256f371dc91afb0f9837ed6d1c
+AUX calculate-assemble-2.2.25-r4.patch 15048 RMD160 d3c1151e23508f43b2a8018d9e160b11afa1e19f SHA1 d899bbeef7bc0f2b8a9536b7873964b0393aeec7 SHA256 2f10e31dad3005ea40bf8dfe81a2a4c47f59a90c738b91d1aab48bee386102b0
+AUX calculate-assemble-2.2.25-r5.patch 15048 RMD160 d3c1151e23508f43b2a8018d9e160b11afa1e19f SHA1 d899bbeef7bc0f2b8a9536b7873964b0393aeec7 SHA256 2f10e31dad3005ea40bf8dfe81a2a4c47f59a90c738b91d1aab48bee386102b0
 DIST calculate-assemble-2.2.24.tar.bz2 25474 RMD160 23e96efd45458af4529bec3e99bda53dccbdefb2 SHA1 04d143480458094f86e44c12d37b9f2fe77de769 SHA256 d0bf55d2132c083447a4014a8466ce2ed10b72ed23072481d66bebd696f928ad
 DIST calculate-assemble-2.2.25.tar.bz2 25488 RMD160 66890bf3a369073954ac54ea1683a9bb4a6bdd1e SHA1 1865513524d743262ce4573eefb8224bf1f95034 SHA256 0ff115cf922cca6c5c199aaff32580c0094e1aabbb05bdab4d49efbcc80ee4d6
 EBUILD calculate-assemble-2.2.24-r1.ebuild 608 RMD160 0362f72ec2fdfb67ee46d8c3406205ebb90afe82 SHA1 eb78cfd00a1e2848d966a7917ca1d028d39b205d SHA256 975c987256fda6bb574565218b3dbee0479a521901ac4e9ea960d34d33c607e6
