@@ -7,7 +7,8 @@ EBUILD calculate-utilities-2.2.25-r5.ebuild 870 RMD160 eb724e4a320bb66edf909cb5f
 EBUILD calculate-utilities-2.2.25-r6.ebuild 870 RMD160 76d8f89d9646d105c95c41d276e877795dc5ed51 SHA1 a39f5be7071406eb7d02ee5a0f181d775dfa9020 SHA256 6a9dd5bd33a3494507541822dbf1324ab57366e38bc8c0fb73deb8f8a22174f2
 EBUILD calculate-utilities-2.2.25-r7.ebuild 870 RMD160 874ab0e5da5139efb32df886c7a297869cdb3953 SHA1 06c4fc39edf85621b30315f9d5097b4af80a751e SHA256 1fe922f2e3eed031c6362d60f9dec197515ea278cc873b1d5a69f87d2678a669
 EBUILD calculate-utilities-2.2.25-r8.ebuild 870 RMD160 3c830d60a5d3893bfe4422fb03a491e4a1414ce3 SHA1 f616b3d4fbfefebd992cfaca5ec3524d1311fd5c SHA256 0e0527dbb4e2c8279115b62ed0ab8df583fa84933348ab456548408f25747815
+EBUILD calculate-utilities-2.2.25-r9.ebuild 876 RMD160 a31f69938aac74b75f8e617fdd3a9920eb6a02ea SHA1 0d4248400fa2deda4172c8ee39238c7ac5569e77 SHA256 a1547b2bc720b28a6ff18c33a84368d4de20ed10a469f328cdfa740c2725ce15
 EBUILD calculate-utilities-2.2.25.ebuild 861 RMD160 e4d64358df7a0d26719652d509270b93f28c4124 SHA1 e3e923e41586a5631ee5ced45ad27ef95d0de78e SHA256 9b32bb8e5042d6cde0fa806b91d10bacf7cde4d9f5299e1f2a39a09ede539664
 EBUILD calculate-utilities-2.2.9999.ebuild 842 RMD160 f2c0fdc1068614b71a37f2226dcde4883ebd2876 SHA1 99f673a52934f552589baf6d12ed9bffc03b8ebd SHA256 56d97b7d2ce11d23b25d9036b4e2ee196b547ce1d11b0cc349a8205515b66bf1
 EBUILD calculate-utilities-3.0.9999.ebuild 441 RMD160 ec17f871ec70a322cff866048e50c150931e0e95 SHA1 d0e036ba01e6a71ad14e6f3e6735bbd0f325df99 SHA256 30c6cd4ce478016cb75458314ea4e745ccb1501be33f14c3a2593d9d0e670c9c
-MISC ChangeLog 32450 RMD160 15d2abf2321e2b39110326d8694e60cc92c94910 SHA1 0069e480ee7c2d0b1f031054a5a4bcfb565ad6c7 SHA256 707c6cb9a17052c62d168775095b247f4dd057bb008a773d70e29a1e41dc13b6
+MISC ChangeLog 32631 RMD160 fa76d77213d9f4791a17931f4e6db8d1bf07ac31 SHA1 8d57c766e67c6aa6a9c7104b075f96ee7edb4925 SHA256 8b4777200946b1ec0f574a17ea3b3bc8b604859572d548972c80a8768943f06a
