@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-utilities-2.2.25-r9 (10 Nov 2011)
+
+  10 Nov 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-utilities-2.2.25-r9.ebuild:
+  Update for support git portage
+
 *calculate-utilities-2.2.25-r8 (04 Nov 2011)
 
   04 Nov 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
